# promoter

./: .gitignore  README.md  docker-compose.prod.yml  docker-compose.unraid.yml  docker-compose.yml  generate_garden_dxf.py  generate_radial_camping_assets.py  startbe.bat  startfe.bat
.github/workflows/: docker-publish.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: ai_client.py  main.py  models.py  social_integrations.py  storage.py
data/: #garden_layout.dxf  garden_layout.dxf
data/camping_design/: camping-area-3d.html  radial_cabins_layout.dxf  radial_cabins_layout.json
frontend/: Dockerfile  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: AdminPromoterPanel.tsx  App.tsx  index.css
